// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination next 1`] = `
<div
  className="next css-88mn7o-Container erl4udx4"
>
  <a
    className="css-n6yx7v-StyledAnchor erl4udx3"
    href="/#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="css-1s13nga-Card erl4udx2"
    >
      <div
        className="css-17qbf5t-ArrowDiv erl4udx1"
      >
        NEXT
        <img
          alt="Next"
          className="css-1w05nfw-ArrowIcon erl4udx0"
          src="test-image-stub"
        />
      </div>
      <span>
        Step 2: Add a funding source
      </span>
    </div>
  </a>
</div>
`;

exports[`Pagination previous 1`] = `
<div
  className="previous css-88mn7o-Container erl4udx4"
>
  <a
    className="css-n6yx7v-StyledAnchor erl4udx3"
    href="/#"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <div
      className="css-1s13nga-Card erl4udx2"
    >
      <div
        className="css-17qbf5t-ArrowDiv erl4udx1"
      >
        <img
          alt="Previous"
          className="css-1w05nfw-ArrowIcon erl4udx0"
          src="test-image-stub"
        />
        PREVIOUS
      </div>
      <span>
        Step 1: Creating Business Verified Customers
      </span>
    </div>
  </a>
</div>
`;
